--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -9,6 +9,19 @@
 
     tools:context=".Dashboard">
 
+    <com.google.android.material.appbar.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <androidx.appcompat.widget.Toolbar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#2196F3"
+            android:id="@+id/toolbar"
+            app:titleTextColor="@android:color/white">
+
+        </androidx.appcompat.widget.Toolbar>
+
+    </com.google.android.material.appbar.AppBarLayout>
     <LinearLayout
         android:layout_width="350dp"
         android:layout_height="200dp"
@@ -49,7 +62,8 @@
             android:textStyle="bold"
             android:textSize="20dp"
             android:layout_marginTop="30dp"
-            android:layout_marginLeft="150dp"/>
+            android:layout_marginLeft="150dp"
+            android:id="@+id/totalConsultation"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -61,6 +75,18 @@
             android:id="@+id/Consultation"/>
 
     </LinearLayout>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Medical Shop near me"
+        android:textStyle="bold"
+        android:textSize="20dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginTop="40dp"
+        android:id="@+id/medical_shop"/>
+
 
 
 </LinearLayout>
