--- a/app/src/main/res/layout/activity_my_appointments.xml
+++ b/app/src/main/res/layout/activity_my_appointments.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp"
-    tools:context=".ConsultationFragment">
+    android:padding="16dp">
 
     <TextView
         android:layout_width="wrap_content"
@@ -13,11 +11,10 @@
         android:text="My Appointments"
         android:textSize="24sp"
         android:textStyle="bold"
-        android:layout_marginBottom="16dp"
-        android:textColor="#2E7D32"/>
+        android:layout_marginBottom="16dp"/>
 
     <ListView
-        android:id="@+id/appointmentsListFrag"
+        android:id="@+id/appointmentsListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
